package com.kna.vstay.controller;

public class VillaController {
}
