package com.kna.vstay.mapper;

public class PaymentMapper {
}
